--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@prisma/client": "^5.17.0",
     "next": "14.2.5",
+    "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "validator": "^13.12.0",
