--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
+    "iron-session": "^8.0.2",
     "next": "14.2.5",
     "prisma": "^5.17.0",
     "react": "^18",
@@ -20,6 +23,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
