feat : product modal 생성 , 추가

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
+    "heroicons": "^2.1.5",
     "iron-session": "^8.0.2",
     "next": "14.2.5",
     "prisma": "^5.17.0",
